--- a/index.html
+++ b/index.html
@@ -7,24 +7,27 @@
     <title>Calculadora IMC</title>
   </head>
   <body>
-    <div class="container">
-      <div class="titulo">Calculadora - IMC</div>
-      <div class="input">
-        <label class="Nome">Nome:</label>
-        <input type="text" />
-      </div>
-      <div class="input">
-        <label class="Peso">Peso:</label>
-        <input type="number" />
-      </div>
-      <div class="input">
-        <label class="Altura">Altura:</label>
-        <input type="number" />
-      </div>
-      <div class="btn">
+    <main>
+      <div class="container">
+        <div class="titulo">Calculadora - IMC</div>
+        <div class="input">
+          <label>Nome:</label>
+          <input type="text" id="nome" />
+        </div>
+        <div class="input">
+          <label>Peso:</label>
+          <input type="number" id="peso" />
+        </div>
+        <div class="input">
+          <label>Altura:</label>
+          <input type="number" id="altura" />
+        </div>
+
         <button type="submit">Enviar</button>
+
+        <div class="resultado" id="resultado"></div>
       </div>
-    </div>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
