--- a/index.html
+++ b/index.html
@@ -12,18 +12,22 @@
         <div class="titulo">Calculadora - IMC</div>
         <div class="input">
           <label>Nome:</label>
-          <input type="text" id="nome" />
+          <input type="text" id="nome" placeholder="Digite seu nome" />
         </div>
         <div class="input">
           <label>Peso:</label>
-          <input type="number" id="peso" />
+          <input type="number" id="peso" placeholder="Digite seu peso em KG" />
         </div>
         <div class="input">
           <label>Altura:</label>
-          <input type="number" id="altura" />
+          <input
+            type="number"
+            id="altura"
+            placeholder="Digite sua altura em CM"
+          />
         </div>
 
-        <button type="submit">Enviar</button>
+        <button type="submit">Calcular</button>
 
         <div class="resultado" id="resultado"></div>
       </div>
