Adicionado funcionalidade ao clicar o botao calcular, ao adicionar o peso e os calculos referentes ao IMC por detrás dos panos

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           />
         </div>
 
-        <button type="submit">Calcular</button>
+        <button type="submit" id="btn">Calcular</button>
 
         <div class="resultado" id="resultado"></div>
       </div>
